--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,6 @@ notifications:
   email: false
 script:
   - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
-  - julia --check-bounds=yes -e 'Pkg.clone(pwd()); Pkg.build("TupleTypes"); Pkg.test("TupleTypes"; coverage=true)'
+  - julia --check-bounds=yes -e 'Pkg.clone(pwd()); Pkg.build("Types"); Pkg.test("Types"; coverage=true)'
 after_success:
-    - julia -e 'cd(Pkg.dir("TupleTypes")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
+    - julia -e 'cd(Pkg.dir("Types")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
